--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3313,3 +3313,23 @@ input, select, textarea {
 				justify-content: center;
 				align-content: center;
 		}
+
+		#container {
+			position: relative;
+			top: 30px;
+			outline:2px solid #000;
+			font-size: 0;
+			margin:auto;
+			height:960px;
+			width:960px;
+			padding: 0;
+			border: none;
+		}
+		
+		.grid {
+			margin:0;
+			padding:0;
+			border:none;
+			outline:1px solid #000;
+			display:inline-block;
+		}
