--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3317,19 +3317,18 @@ input, select, textarea {
 		#container {
 			position: relative;
 			top: 30px;
-			outline:2px solid #000;
 			font-size: 0;
 			margin:auto;
-			height:380px;
-			width:380px;
+			height:100%;
+			width:100%;
 			padding: 0;
 			border: none;
 		}
 		
 		.grid {
-			margin:0;
+			margin:0px;
 			padding:0;
 			border:none;
-			outline:1px solid #000;
+			outline:1px solid black;
 			display:inline-block;
 		}
